@@ -1,9 +1,10 @@
 Adminer dev:
 Align numbers right (bug #912)
-CSS: Dark mode syntax highlighting
+Remember export setting at SQL command
 SQL textarea: Open help on Ctrl+click
+CSS: Dark mode syntax highlighting
 Designs named adminer-dark.css use dark basic style
-Plugins: add method syntaxHighlighting()
+Plugins: Add method syntaxHighlighting()
 
 Adminer 5.0.5 (released 2025-03-13):
 MySQL: Display converting function for binary, bit or geometry fields
